--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -14,5 +14,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Open the file
-        run: |
-          echo "My API key is ${{secrets.API_KEY}}"
+        run: echo "Hello $NAME. $BUILD. Using Java Version $JAVA_VERSION. My API_KEY is ${{secrets.API_KEY}}"
