--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -14,5 +14,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Open the file
-        run: |
-          cat test.txt
+        run: echo "My API_KEY is ${{ vars.TEST_VAR }}"
