--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    enviroment: PROD
+    environment: PROD
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
